--- a/assessment/css/base.css
+++ b/assessment/css/base.css
@@ -65,7 +65,7 @@ h2.read-more-page{
   padding: 0;
   padding-left: 16%;
   padding-bottom: 2%;
-  padding-top: 5%;
+  /* padding-top: 5%; */
 }
 
 .community-titles h2{
