--- a/assessment/css/components.css
+++ b/assessment/css/components.css
@@ -603,6 +603,76 @@ nav {
   border-radius: 50%;
 }
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 2500; /* Sit on top */
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  margin-top: 10%;
+  border: 1px solid #888;
+  width: 50%;
+  height: 50%;
+  border-radius: 10px;
+}
+
+.modal-content h2{
+  padding:0 10%;
+  padding-top: 8%;
+  padding-bottom: 5%;
+}
+
+.modal-content p{
+  font-size: 15px;
+  padding: 2% 10%;
+}
+
+.modal-content span{
+  padding: 0;
+  padding: 2% 10%;
+}
+
+/* Close button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.insights-modal .modal-content{
+  height: 40%;
+}
+
+.insights-modal h2{
+  padding: 0;
+  padding-left: 10%;
+  padding-top: 7%;
+}
+
+.modal-body h3{
+  display: none;
+}
+
+
 /* Media query for mobile */
 @media (max-width: 768px) {
 
