--- a/assessment/css/layout.css
+++ b/assessment/css/layout.css
@@ -639,14 +639,15 @@ footer h2{
 }
 
 .footer-links {
+  display: flex;
   margin-top: 10px;
-  padding-left: 19%;
-  padding-right: 20%;
+  padding: 0 10%;
+  padding-left: 12%;
 }
 
 .footer-links a {
   color: white; /* White link color */
-  margin: 0 10px; /* Space between links */
+  margin: 5px 0; /* Space between links */
   text-decoration: none;
 }
 
@@ -793,8 +794,9 @@ footer h2{
 
   .title-container4{
     width: 100%;
-    padding-left: 10%;
-    margin-top: 10%;
+    padding: 10%;
+    padding-top: 15%;
+    /* margin-top: 10%; */
     gap: 0;
   }
 
@@ -954,6 +956,7 @@ footer h2{
     justify-content: center;
     align-items: center;
     margin: 0;
+    margin-top: 50px;
     padding: 0;
   }
 
